# Data

./: 06_daegu_bus_api.ipynb  README.md  ch09_happy.ipynb  ch10_no-show-result(day53).ipynb  ch10_no-show.ipynb  day18_01_daegu_bus_api_worksheet.ipynb  day18_02_public_api_practice_collection.ipynb  day51_분석데이터전처리.ipynb  day54_스케일링.ipynb  day54_의료비.ipynb  day54_인코딩.ipynb  kbo.ipynb  pyproject.toml  연습문제 10-2.ipynb  연습문제 10-3.ipynb  연습문제 10-4.ipynb
